web/teddit/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: teddit
  namespace: web
  labels:
    app: teddit
spec:
  ports:
    - name: server
      port: 8080
  selector:
    app: teddit
